--- a/views/recipe.njk
+++ b/views/recipe.njk
@@ -2,18 +2,13 @@
 
 {% block content %}
         <section>
-        
-        <div class="wrapper">   
-            <div class="container">
-                <div class="container__info">
-                    <h1>As melhores receitas</h1>
-                    <p>Aprenda a construir os melhores pratos com receitas criadas por profissionais do mundo inteiro.</p>
-                </div>
-                <div class="container__img">
-                    <img src="/assets/chef.png" alt="chef">
-                </div>
+        {% for item in items %}
+        <div class="wrapper-recipe">   
+            <div class="container-recipe">
+                <img src="{{item.image}}">
             </div>
         </div> 
+        {% endfor %}
 
     <h2 class="subtitle">Mais acessadas</h2>
 
