--- a/views/index.njk
+++ b/views/index.njk
@@ -19,7 +19,7 @@
 
         <div class="cards">
             {% for item in items %}
-                <div class="card" id="{{ item.title }}">
+                <div class="card" id="{{ item.id }}">
                     <div class="card_img">
                         <img src="{{item.image}}" alt="burger">
                     </div>
