--- a/views/recipe.njk
+++ b/views/recipe.njk
@@ -3,12 +3,11 @@
 {% block content %}
     <div class="card">
         <div class="card_img">
-            <img src="{{item.image}}" alt="burger">
+            <img src="{{recipe.image}}" alt="burger">
         </div>
         <div class="content">
-            <p class="revenue">{{item.title}}</p>
-            <p class="author">{{item.author}}</p>
+            <p class="revenue">{{recipe.title}}</p>
+            <p class="author">{{recipe.author}}</p>
         </div>
     </div>
-
 {% endblock %}
