--- a/views/recipe.njk
+++ b/views/recipe.njk
@@ -1,13 +1,67 @@
 {% extends "layout.njk" %}
 
+{% block head %}
+    <link rel="stylesheet" type="text/css" href="/styles.css" media="screen" />
+{% endblock %}
+
 {% block content %}
     <div class="card">
         <div class="card_img">
-            <img src="{{recipe.image}}" alt="burger">
+            <img src="{{items.image}}" alt="Imagem de {{items.title}}">
         </div>
         <div class="content">
-            <p class="revenue">{{recipe.title}}</p>
-            <p class="author">{{recipe.author}}</p>
+            <p class="revenue">{{items.title}}</p>
+            <p class="author">{{items.author}}</p>
         </div>
     </div>
 {% endblock %}
+
+{# {% block content %}
+
+ <section class="produtos-descricao" >
+
+    <img src="{{items.image}}" alt="Imagem de {{items.title}}"/>
+    
+    <h1>
+        {{items.title}}
+    </h1>
+
+    <p>
+        {{items.author}}
+    </p>
+
+    <div class="ingredientes">
+
+        <div class="ingredientes-titulo">
+            <h2>Ingredientes</h2> 
+            <a class="button">Esconder</a>
+        </div>
+        
+
+        <ul class="ingredientes-lista ingLista ingredients-details" >
+
+            {% for ingredientes in items.ingredients %}
+            
+            <li id="ingredients-list" >● {{ingredientes}};</li> 
+
+            {% endfor %}
+        </ul>
+
+        <div class="ingredientes-preparo ingLista">
+            <h2>Modo Preparo</h2>
+            <a  class="button" > Esconder </a>  
+        </div>
+
+        <p id="ingredients-preparation" class="ingredients-details" > {{items.preparation}}</p>
+        
+        <div class="ingredientes-informacoes-adicionais">
+            <h2>Informações adicionais</h2>
+            <a class="button"> Esconder </a> 
+        </div>   
+
+        <p id="ingredients-information" class="ingredients-details" >{{items.information}}</p>
+
+    </div>
+</section>
+
+{% endblock %} #}
