--- a/views/sobre.njk
+++ b/views/sobre.njk
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foodfy</title>
-    <link rel="stylesheet" href="/src/styles.css">
-    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <header>
         <div class="links">
             <div class="logo">
-                <a href="index.html" id="foodfy"><img src="/assets/logo.png" alt=""></a>
+                <a href="/" id="foodfy"><img src="/assets/logo.png" alt=""></a>
             </div>
             <div class="menu">
-            <a href="sobre.html" id="sobre" class="sobre">Sobre</a>
-            <a href="receitas.html" id="receitas" classe="receitas">Receitas</a>
+            <a href="/sobre" id="sobre" class="sobre">Sobre</a>
+            <a href="/" id="receitas" classe="receitas">Receitas</a>
             </div>
         </div>
     </header>
