--- a/views/layout.njk
+++ b/views/layout.njk
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <link rel="shortcut icon" href="/public/assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <title>Foodfy</title>
 </head>
 <body>
@@ -14,8 +14,8 @@
                 <a href="/" id="foodfy"><img src="/assets/logo.png" alt=""></a>
             </div>
             <div class="menu">
-            <a href="/sobre.html" id="sobre">Sobre</a>
-            <a href="/recipe/:id" id="receitas">Receitas</a>
+            <a href="/sobre" id="sobre">Sobre</a>
+            <a href="/" id="receitas">Receitas</a>
             </div>
         </div>
     </header>
