--- a/views/recipes/fields.njk
+++ b/views/recipes/fields.njk
@@ -1,5 +1,5 @@
 <div class="item">
-    <div>Imagem da Receita</div>
+    <div class="title-item">Imagem da Receita</div>
     <div>
         <input 
             type="url" 
@@ -9,29 +9,30 @@
 </div>
 
 <div class="item">
-    <div>Ingredientes</div>
+    <div class="title-item">Ingredientes</div>
     <div id="ingredients">
         <div class="ingredient">
             <input type="text" name="ingredients[]" value=""/>
         </div>
     </div>
-        <button type="button" class="add-ingredient">Adicionar novo ingrediente</button>
+        <a type="button" class="add-ingredient">Adicionar novo ingrediente</a>
 </div>
 
 <div class="item">
-    <div>Modo de preparo</div>
+    <div class="title-item">Modo de preparo</div>
     <div id="ingredients">
         <div class="ingredient">
             <input type="text" name="ingredients[]" value=""/>
         </div>
     </div>
-        <button type="button" class="add-ingredient">Adicionar novo passo</button>
+        <a type="button" class="add-new-step">Adicionar novo passo</a>
 </div>
 
 <div class="item">
-    <div>Informações adicionais</div>
+    <div class="title-item">Informações adicionais</div>
     <div>
         <input 
+            class="informations"
             type="text" 
             name="info_add" 
         >
