--- a/public/styles.css
+++ b/public/styles.css
@@ -6,17 +6,12 @@
     border: 0;
 }
 
-body {
-    margin: 0 230px;
-    font-family: 'Roboto', sans-serif;
-    position: relative;
-}
-
-
 header .links{
-    margin: 30px 0 26px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    display: flex;
+    align-items: baseline;
+    width: 100%;
+    padding: 50px 0px 20px;
+    margin: 0 230px;
 }
 
 header .links .menu a{
@@ -31,6 +26,16 @@ header .links .menu a:active {
 
 header .links .menu a:focus{
     font-weight: bold;
+}
+
+header .navbar-black {
+    
+}
+
+.wrapper-section {
+    margin: 0 230px;
+    font-family: 'Roboto', sans-serif;
+    position: static;
 }
 
 .wrapper .container {
@@ -181,9 +186,36 @@ section .second-title {
 
 input {
     width: 100%;
-    outline: none;
-    color: #ddd;
-    font-weight: bold;
+    height: 49px;
+    font-weight: normal;
     font-size: 18px;
-    border: 1px solid #555;
+    margin-bottom: 15px;
+    border: 1px solid #ddd;
+}
+
+.create-title {
+    padding: 55px 0 30px;
+    font-size: 24px;
+    line-height: 34px;
+}
+
+.item {
+    font-weight: bold;
+    padding-bottom: 15px;
+}
+
+.title-item {
+    padding-bottom: 10px;
+    font-size: 16px;
+    line-height: 26px;
+}
+
+.add-ingredient, .add-new-step {
+    color: #6558C3;
+    cursor: pointer;
+
+}
+
+.item .informations {
+    height: 257px;
 }
