--- a/views/layoutAdmin.njk
+++ b/views/layoutAdmin.njk
@@ -9,26 +9,14 @@
 </head>
 <body>
     <header>
-        <div class="links">
+        <div class="links navbar-black">
             <div class="logo">
                 <a href="/" id="foodfy"><img src="/assets/logo.png" alt=""></a>
-            </div>
-            <div class="menu">
-            <a href="/sobre" id="sobre">Sobre</a>
-            <a href="/" id="receitas">Receitas</a>
             </div>
         </div>
     </header>
     <section class="wrapper-section">
         {% block content %}{% endblock %}
-
-        <footer>
-            <div class="footer">
-                <p class="copyright">
-                    Todos os direitos reservados, receitas Foodfy.
-                </p>
-            </div>
-        </footer>
     </section>
 </body>
 </html>
