Foodfy admin update

--- a/views/recipes/create.njk
+++ b/views/recipes/create.njk
@@ -1,10 +1,12 @@
 {% extends "layoutAdmin.njk" %}
 
 {% block content %}
-    <form method="POST" action="/recipes">
+    <form method="POST" action="/">
         <section>
+            <div class="title-page">
             <h1 class="create-title">Criando Receita</h1>
-
+            <button>Salvar receita</button>
+            </div>
             {% include "recipes/fields.njk" %}
             
         </section>
