--- a/public/styles.css
+++ b/public/styles.css
@@ -28,10 +28,6 @@ header .links .menu a:focus{
     font-weight: bold;
 }
 
-header .navbar-black {
-    
-}
-
 .wrapper-section {
     margin: 0 230px;
     font-family: 'Roboto', sans-serif;
@@ -218,4 +214,9 @@ input {
 
 .item .informations {
     height: 257px;
+}
+
+.title-page {
+    display: flex;
+    align-items: stretch;
 }
