--- a/views/recipes/create.njk
+++ b/views/recipes/create.njk
@@ -4,8 +4,8 @@
     <form method="POST" action="/">
         <section>
             <div class="title-page">
-            <h1 class="create-title">Criando Receita</h1>
-            <button>Salvar receita</button>
+                <h1 class="create-title">Criando Receita</h1>
+                <button type="submit" class="btn-submit">Salvar receita</button>
             </div>
             {% include "recipes/fields.njk" %}
             
