--- a/views/recipes/fields.njk
+++ b/views/recipes/fields.njk
@@ -31,11 +31,11 @@
 <div class="item">
     <div class="title-item">Informações adicionais</div>
     <div>
-        <input 
+        <textarea 
             class="informations"
-            type="text" 
-            name="info_add" 
-        >
+            cols="35"
+            rows="8"
+        ></textarea>
     </div>
 </div>
 
