--- a/views/recipes/fields.njk
+++ b/views/recipes/fields.njk
@@ -1,5 +1,5 @@
 <div class="item">
-    <div class="title-item">Imagem da Receita</div>
+    <div class="title-item">Imagem da receita</div>
     <div>
         <input 
             type="url" 
