--- a/views/recipes/fields.njk
+++ b/views/recipes/fields.njk
@@ -15,17 +15,17 @@
             <input type="text" name="ingredients[]" value=""/>
         </div>
     </div>
-        <a type="button" class="add-ingredient">Adicionar novo ingrediente</a>
+        <button type="button" class="add-ingredient">Adicionar novo ingrediente</button>
 </div>
 
 <div class="item">
     <div class="title-item">Modo de preparo</div>
-    <div id="ingredients">
-        <div class="ingredient">
-            <input type="text" name="ingredients[]" value=""/>
+    <div id="prepare">
+        <div class="prepare">
+            <input type="text" name="steps[]" value=""/>
         </div>
     </div>
-        <a type="button" class="add-new-step">Adicionar novo passo</a>
+        <button type="button" class="add-new-step">Adicionar novo passo</button>
 </div>
 
 <div class="item">
