--- a/views/layoutAdmin.njk
+++ b/views/layoutAdmin.njk
@@ -11,7 +11,7 @@
     <header>
         <div class="links navbar-black">
             <div class="logo">
-                <a href="/" id="foodfy"><img src="/assets/logo.png" alt=""></a>
+                <a href="/admin/recipes" id="foodfy"><img src="/assets/logo.png" alt=""></a>
             </div>
         </div>
     </header>
