--- a/views/recipes/fields.njk
+++ b/views/recipes/fields.njk
@@ -10,6 +10,28 @@
 </div>
 
 <div class="item">
+    <div class="title-item">Imagem da receita</div>
+    <div>
+        <input 
+            type="url" 
+            name="image_url"
+            value="{{ recipe.image_url }}"
+        >
+    </div>
+</div>
+
+<div class="item">
+    <div class="title-item">Imagem da receita</div>
+    <div>
+        <input 
+            type="url" 
+            name="image_url"
+            value="{{ recipe.image_url }}"
+        >
+    </div>
+</div>
+
+<div class="item">
     <div class="title-item">Ingredientes</div>
     <div id="ingredients">
         <div class="ingredient">
