--- a/views/recipes/index.njk
+++ b/views/recipes/index.njk
@@ -1,5 +1,17 @@
 {% extends "layoutAdmin.njk" %}
 
 {% block content %}
-
+    <div class="manager-recipes">
+      <h1>Gerenciar receitas</h1>
+      <div class="grid-recipes">
+        <div class="card-recipe">
+            <img src={{ recipe.image_url }} alt={{ recipe.title }} class="img-recipe" />
+            <div class="content-recipe">
+              <h1>Triplo bacon burger</h1>
+              <h2>por Jorge Relato</h2>
+              <a>Visualizar</a>
+            </div>
+        </div>
+      </div>
+    </div>
 {% endblock content %}
