--- a/public/styles.css
+++ b/public/styles.css
@@ -248,3 +248,57 @@ input {
     height: 37px;
     cursor: pointer;    
 }
+
+/* ADMIN Page Index */
+
+.manager-recipes {
+    padding-top: 50px;
+    width: 100%;
+}
+
+.manager-recipes > h1 {
+    font-size: 24px;
+    line-height: 34px;
+    margin-bottom: 30px;
+    font-weight: bold;
+}
+
+.grid-recipes {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+.card-recipe {
+    display: flex;
+    gap: 20px;
+}
+
+.card-recipe > img {
+    width: 172px;
+    height: 80px;
+    border-radius: 8.57px;
+}
+
+.card-recipe .content-recipe > h1 {
+    font-size: 21px;
+    line-height: 31px;
+    color: #111;
+    font-weight: normal;
+}
+
+.card-recipe .content-recipe > h2 {
+    font-size: 14px;
+    line-height: 24px;
+    color: #777;
+    font-weight: normal;
+}
+
+.card-recipe .content-recipe > a {
+    color: #6558C3;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
