--- a/public/styles.css
+++ b/public/styles.css
@@ -265,7 +265,7 @@ input {
 
 .grid-recipes {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
 }
 
