--- a/views/recipes/show.njk
+++ b/views/recipes/show.njk
@@ -1,6 +1,49 @@
 {% extends "layoutAdmin.njk" %}
 
 {% block content  %}
-  
+  <section class="wrapper-recipe">
+        <div class="recipe">
+            <div class="recipe_img">
+                <img src="{{ recipe.image_url }}" alt="Imagem de">
+            </div>
+            <div class="content-recipe">
+                <h1 class="revenue">{{ recipe.title }}</h1>
+                <h2 class="author">{{ recipe.author }}</h2>
+            </div>
+        </div>
 
+        <div id="recipe-content">
+            <div class="topic">
+                <h3>Ingredientes</h3> 
+            </div>
+            
+            <div id="ingredients" class="topic-content">
+                {% for ingredients in recipe.ingredients %}
+                    <li>
+                        {{ingredients}}
+                    </li>
+                {% endfor %}
+            </div>
+
+            <div class="topic">
+                <h3>Modo de Preparo</h3>
+            </div>
+            <div id="preparation" class="topic-content">
+                <ul>
+                {% for preparation in recipe.preparation %}
+                    <li>
+                        {{preparation}}
+                    </li>
+                 {% endfor %}
+                </ul>
+            </div>
+            
+            <div id="information" class="topic">
+                <h3>Informações adicionais</h3>
+            </div>
+            <div class="topic-content">
+                <p id="information-recipe">{{recipe.information}}</p>
+            </div>
+        </div>
+    </section>
 {% endblock %}
