--- a/views/recipes/show.njk
+++ b/views/recipes/show.njk
@@ -47,7 +47,7 @@
                 <h3>Informações adicionais</h3>
             </div>
             <div class="topic-content">
-                <p>{{recipe.information}}</p>
+                <p>{{ recipe.description }}</p>
             </div>
         </div>
     </main>
