--- a/views/recipe.njk
+++ b/views/recipe.njk
@@ -5,29 +5,31 @@
 {% endblock %}
 
 {% block content %}
-    <section class="wrapper-recipe">
-        <div class="recipe">
-            <div class="recipe_img">
+    <main>
+        <div>
+            <div class="menu-image_recipe">
                 <img src="{{items.image}}" alt="Imagem de {{items.title}}">
             </div>
-            <div class="content-recipe">
-                <h1 class="revenue">{{items.title}}</h1>
-                <h2 class="author">{{items.author}}</h2>
+            <div class="menu-info_recipe">
+                <h1>{{items.title}}</h1>
+                <h2>{{items.author}}</h2>
             </div>
         </div>
 
-        <div id="recipe-content">
+        <div class="content_recipe">
             <div class="topic">
                 <h3>Ingredientes</h3> 
                 <h4>ESCONDER</h4>
             </div>
             
             <div id="ingredients" class="topic-content">
+                <ul>
                 {% for ingredients in items.ingredients %}
                     <li>
                         {{ingredients}}
                     </li>
                 {% endfor %}
+                </ul>
             </div>
 
             <div class="topic">
@@ -49,7 +51,7 @@
                 <h4>ESCONDER</h4>
             </div>
             <div class="topic-content">
-                <p id="information-recipe">{{items.information}}</p>
+                <p>{{items.information}}</p>
             </div>
         </div>
 
